# app_dist

./: Cargo.toml  README.md  release_cfg.dart
.github/workflows/: rust.yaml
src/: arch.rs  cli.rs  macros.rs  main.rs  model.rs  target.rs  util.rs
test_dir/: latest.apk  update.json  update.json.bak
