[package]
name = "app_dist"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
const_format = "0.2.32"
difference = "2.0.0"
lazy_static = "1.4.0"
regex = "1.10.4"
serde = "1.0.198"
serde_json = "1.0.116"
strum = { version = "0.26.2", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }

[profile.release]
opt-level = 's'
lto = true
panic = 'abort'
